# 2025_Capstone

./: .gitignore  README.md  requirements.txt
Auth_generator/: index.html
MCU_Simulation/: CMakeLists.txt  communicate.c  flowchat.tex  main.c  openssl_en_de.c  openssl_en_de.h  sha256.c  sha256.h
SHA256/: CMakeLists.txt
central_server/: database.db  server.py  server_private.pem  test.py  test2.py
extensions/: background.js  content.js  manifest.json
src/auth_generator/: README.md  index.html
src/browser_extension/: README.md  content_script.js  manifest.json  popup.html  popup.js
src/central_server/: README.md  api_server.py  setup_db.py
src/client_app/: README.md  auth_validator.py  browser_communication.py  cal.py  crypto_utils.py  domaintest.py  error_handler.py  importlist.py  main.py  ui_controller.py
src/mcu_simulator/: CMakeLists.txt  README.md  aes_generator.c  global_data.h  main.c  network_communication.c  sha256.c  sha256.h  timer_simulator.c
src/utils/: README.md  main.cpp
userProgram/: auth.txt  checkauth.py  communicate.py  domaintest.py  global_domain.py  global_v.py  importlist.py  main.py  rsa_crypt.py  server_public.pem  show_ui.py  user_to_chrome.py
